--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,14 +7,18 @@ html,
 body {
     margin: 0;
     padding: 0;
+    background-color: var(--bg-main);
+    color: var(--text-main);
 }
 
 body {
+    --bs-body-bg: var(--bg-main);
+    --bs-body-color: var(--text-main);
     min-width: 320px;
     min-height: 100vh;
     font-family: var(--font-main);
-    background-color: var(--bg-main);
-    color: var(--text-main);
+    background-color: var(--bg-main) !important;
+    color: var(--text-main) !important;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
